--- a/01_NLP/01_Intro_to_SpaCy.ipynb
+++ b/01_NLP/01_Intro_to_SpaCy.ipynb
@@ -23,32 +23,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello\n",
-      ",\n",
-      "world\n",
-      ".\n",
-      "Natural\n",
-      "Language\n",
-      "Processing\n",
-      "in\n",
-      "10\n",
-      "lines\n",
+      "Dive\n",
+      "into\n",
+      "NLTK\n",
+      ":\n",
+      "Part\n",
+      "-\n",
       "of\n",
-      "code\n",
-      ".\n"
+      "-\n",
+      "speech\n",
+      "tagging\n",
+      "and\n",
+      "POS\n",
+      "Tagger\n"
      ]
     }
    ],
    "source": [
     "# Process text\n",
-    "doc = en_nlp(u'Hello, world. Natural Language Processing in 10 lines of code.')\n",
+    "doc = en_nlp(u'Dive into NLTK: Part-of-speech tagging and POS Tagger')\n",
     "\n",
     "# Access to the tokens\n",
     "for token in doc:\n",
@@ -57,15 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, world.\n",
-      "Natural Language Processing in 10 lines of code.\n"
+      "Dive into NLTK: Part-of-speech tagging and POS Tagger\n"
      ]
     }
    ],
@@ -77,26 +76,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello  -->  INTJ\n",
-      ",  -->  PUNCT\n",
-      "world  -->  NOUN\n",
-      ".  -->  PUNCT\n",
-      "Natural  -->  ADJ\n",
-      "Language  -->  PROPN\n",
-      "Processing  -->  PROPN\n",
-      "in  -->  ADP\n",
-      "10  -->  NUM\n",
-      "lines  -->  NOUN\n",
+      "Dive  -->  VERB\n",
+      "into  -->  ADP\n",
+      "NLTK  -->  PROPN\n",
+      ":  -->  PUNCT\n",
+      "Part  -->  NOUN\n",
+      "-  -->  PUNCT\n",
       "of  -->  ADP\n",
-      "code  -->  NOUN\n",
-      ".  -->  PUNCT\n"
+      "-  -->  PUNCT\n",
+      "speech  -->  NOUN\n",
+      "tagging  -->  NOUN\n",
+      "and  -->  CCONJ\n",
+      "POS  -->  PROPN\n",
+      "Tagger  -->  PROPN\n"
      ]
     }
    ],
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -182,24 +181,35 @@
        "      <td>to</td>\n",
        "      <td>ADP</td>\n",
        "      <td>IN</td>\n",
-       "      <td>aux</td>\n",
+       "      <td>prep</td>\n",
        "      <td>xx</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NUM</td>\n",
+       "      <td>CD</td>\n",
+       "      <td>nummod</td>\n",
+       "      <td>dd</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
        "      <td>duck</td>\n",
        "      <td>duck</td>\n",
-       "      <td>VERB</td>\n",
-       "      <td>VB</td>\n",
-       "      <td>xcomp</td>\n",
+       "      <td>NOUN</td>\n",
+       "      <td>NN</td>\n",
+       "      <td>pobj</td>\n",
        "      <td>xxxx</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>.</td>\n",
        "      <td>.</td>\n",
        "      <td>PUNCT</td>\n",
@@ -214,16 +224,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   text   lemma    pos  tag    dep shape  is_alpha  is_stop\n",
-       "0  They  -PRON-   PRON  PRP  nsubj  Xxxx      True    False\n",
-       "1  told    tell   VERB  VBD   ROOT  xxxx      True    False\n",
-       "2    us  -PRON-   PRON  PRP   dobj    xx      True     True\n",
-       "3    to      to    ADP   IN    aux    xx      True     True\n",
-       "4  duck    duck   VERB   VB  xcomp  xxxx      True    False\n",
-       "5     .       .  PUNCT    .  punct     .     False    False"
+       "   text   lemma    pos  tag     dep shape  is_alpha  is_stop\n",
+       "0  They  -PRON-   PRON  PRP   nsubj  Xxxx      True    False\n",
+       "1  told    tell   VERB  VBD    ROOT  xxxx      True    False\n",
+       "2    us  -PRON-   PRON  PRP    dobj    xx      True     True\n",
+       "3    to      to    ADP   IN    prep    xx      True     True\n",
+       "4    10      10    NUM   CD  nummod    dd     False    False\n",
+       "5  duck    duck   NOUN   NN    pobj  xxxx      True    False\n",
+       "6     .       .  PUNCT    .   punct     .     False    False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +242,7 @@
    "source": [
     "# Several annotations available\n",
     "\n",
-    "en_doc = en_nlp(u'They told us to duck.')\n",
+    "en_doc = en_nlp(u'They told us to 10 duck.')\n",
     "token_list = []\n",
     "for token in en_doc:\n",
     "    token_list += [(token.text, token.lemma_, token.pos_, token.tag_, token.dep_,\n",
@@ -239,6 +250,15 @@
     "\n",
     "pd.DataFrame(token_list, columns=['text', 'lemma', 'pos', 'tag', 'dep',\n",
     "          'shape', 'is_alpha', 'is_stop'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc."
    ]
   },
   {
@@ -252,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -336,9 +356,9 @@
      "output_type": "stream",
      "text": [
       "Chunk - root - root dep - root head\n",
-      "Autonomous cars cars nsubj shift\n",
-      "insurance liability liability dobj shift\n",
-      "manufacturers manufacturers pobj toward\n"
+      "Autonomous cars  - cars  - nsubj  - shift\n",
+      "insurance liability  - liability  - dobj  - shift\n",
+      "manufacturers  - manufacturers  - pobj  - toward\n"
      ]
     }
    ],
@@ -347,7 +367,7 @@
     "doc = en_nlp(u'Autonomous cars shift insurance liability toward manufacturers')\n",
     "print('Chunk - root - root dep - root head')\n",
     "for chunk in doc.noun_chunks:\n",
-    "    print(chunk.text, chunk.root.text, chunk.root.dep_, chunk.root.head.text)"
+    "    print(chunk.text, ' -', chunk.root.text, ' -', chunk.root.dep_, ' -', chunk.root.head.text)"
    ]
   },
   {
@@ -523,10 +543,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -655,7 +673,7 @@
        "7           .           .  PUNCT   punct      .     False    False"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,6 +692,33 @@
     "pd.DataFrame(token_list, columns=['text', 'lemma', 'pos', 'dep',\n",
     "          'shape', 'is_alpha', 'is_stop'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hola', 'Mundo', '.', 'Aqui', 'tener', 'do', 'sentenciar', '.']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[t.lemma_ for t in es_doc]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
