--- a/01_NLP/01_NLP_whit_NLTK.ipynb
+++ b/01_NLP/01_NLP_whit_NLTK.ipynb
@@ -199,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['this’s a sent tokenize test.', 'this is sent two.', 'is this sent three?', 'sent 4 is cool!', 'Now it’s your turn.']\n"
+      "['this’s a sent tokenize test.', 'tis is sennt two.', 'is this sent three?', 'sent 4 is cool!', 'Now it’s your turn.']\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
     "# Use the predefined sentence tokenizer.\n",
     "from nltk.tokenize import sent_tokenize\n",
     "\n",
-    "text = \"this’s a sent tokenize test. this is sent two. is this sent three? sent 4 is cool! Now it’s your turn.\"\n",
+    "text = \"this’s a sent tokenize test. tis is sennt two. is this sent three? sent 4 is cool! Now it’s your turn.\"\n",
     "sent_tokenize_list = sent_tokenize(text)\n",
     "\n",
     "print(sent_tokenize_list)"
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "['¡Buenos días!', '¿Estas bien?']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -290,14 +290,14 @@
        " 'french.pickle']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# List of sentence tokenizers available in the punkt module\n",
-    "os.listdir('/Users/jorge/nltk_data/tokenizers/punkt/')\n",
+    "os.listdir(nltk.data.path[0]+'/tokenizers/punkt/')\n",
     "\n",
     "\n"
    ]
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -513,8 +513,8 @@
       "[nltk_data]     /Users/jorge/nltk_data...\n",
       "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
       "[nltk_data]       date!\n",
-      "['Dive', 'into', 'NLTK', ':', 'Part-of-speech', 'tagging', 'and', 'POS', 'Tagger']\n",
-      "[('Dive', 'NNP'), ('into', 'IN'), ('NLTK', 'NNP'), (':', ':'), ('Part-of-speech', 'JJ'), ('tagging', 'NN'), ('and', 'CC'), ('POS', 'NNP'), ('Tagger', 'NNP')]\n"
+      "['dive', 'into', 'NLTK', ':', 'Part-of-speech', 'tagging', 'and', 'POS', 'Tagger']\n",
+      "[('dive', 'NN'), ('into', 'IN'), ('NLTK', 'NNP'), (':', ':'), ('Part-of-speech', 'JJ'), ('tagging', 'NN'), ('and', 'CC'), ('POS', 'NNP'), ('Tagger', 'NNP')]\n"
      ]
     }
    ],
@@ -523,7 +523,7 @@
     "nltk.download('averaged_perceptron_tagger')\n",
     "\n",
     "# The POS model must be applied over word tokenized text\n",
-    "text = nltk.word_tokenize(\"Dive into NLTK: Part-of-speech tagging and POS Tagger\")\n",
+    "text = nltk.word_tokenize(\"dive into NLTK: Part-of-speech tagging and POS Tagger\")\n",
     "print(text)\n",
     "# Use the recommended part of speech tagger\n",
     "print(nltk.pos_tag(text))"
@@ -656,7 +656,7 @@
    ],
    "source": [
     "from nltk.stem import SnowballStemmer\n",
-    "print('Available naguages in snowball setemmer:', \" \".join(SnowballStemmer.languages))"
+    "print('Available languages in snowball stemmer:', \" \".join(SnowballStemmer.languages))"
    ]
   },
   {
@@ -765,7 +765,7 @@
    "outputs": [],
    "source": [
     "# Integrating the treebank POS tags to wordnet compatible pos tags\n",
-    "# - The recomended POS use different codes for the POS lables that the wordnet lemmatizer needs\n",
+    "# - The recomended POS use different codes for the POS labels that the wordnet lemmatizer needs\n",
     "from nltk.corpus import wordnet\n",
     "\n",
     "def get_wordnet_pos(treebank_tag):\n",
