--- a/04_RNN/sentiment_model/04_Model4_Stacked LSTM -SOLVED.ipynb
+++ b/04_RNN/sentiment_model/04_Model4_Stacked LSTM -SOLVED.ipynb
@@ -186,18 +186,29 @@
     "# LAYER 1: inputs\n",
     "seq_prev_input = tf.keras.layers.Input(shape=(max_len, ), dtype='int32') \n",
     "\n",
+    "\n",
+    "\n",
     "# LAYER 2: Create embedings\n",
     "embeds = tf.keras.layers.Embedding(max_features, dim_embedings, input_length=max_len)(seq_prev_input)\n",
     "\n",
     "# LAYERS 3: RNN - forwards LSTM with dropout\n",
     "droput_percent = 0.3\n",
+    "\n",
     "forwards1 = tf.keras.layers.LSTM(num_hidden_rnn, return_sequences=True,\n",
     "                 dropout=droput_percent, recurrent_dropout=droput_percent, name='Forward_1')(embeds)\n",
-    "rnn_out   = tf.keras.layers.LSTM(num_hidden_rnn, return_sequences=False,\n",
+    "\n",
+    "\n",
+    "forwards2   = tf.keras.layers.LSTM(num_hidden_rnn, return_sequences=False,\n",
     "                 dropout=droput_percent, recurrent_dropout=droput_percent, name='Forward_2')(forwards1)\n",
     "\n",
+    "\n",
+    "for1_for2_concat = tf.keras.layers.concatenate([forwards1, forwards2], axis=-1, name='Forward_Backward')\n",
+    "\n",
+    "\n",
     "# LAYER 4: Dense layer to outputs - softmax activation\n",
-    "output = tf.keras.layers.Dense(2, activation='softmax')(rnn_out)\n",
+    "output = tf.keras.layers.Dense(2, activation='softmax')(for1_for2_concat)\n",
+    "\n",
+    "\n",
     "\n",
     "# Model Architecture defined\n",
     "model_1 = tf.keras.models.Model(inputs=seq_prev_input, outputs=output)\n",
