--- a/04_RNN/sentiment_model/00_data_preprocesing.ipynb
+++ b/04_RNN/sentiment_model/00_data_preprocesing.ipynb
@@ -40,9 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Imports and paths\n",
@@ -59,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Generator of list of files in a folder and subfolders\n",
@@ -81,7 +77,7 @@
     "            yield os.path.join(path, name)\n",
     "\n",
     "#Test\n",
-    "#print(gen_find(\"*.txt\", data_path+'train/pos/').next())"
+    "print(next(gen_find(\"*.txt\", data_path+'train/pos/')))"
    ]
   },
   {
@@ -102,7 +98,7 @@
     "    sentences = []\n",
     "    sentences_list = gen_find(\"*.txt\", path)\n",
     "    for ff in sentences_list:\n",
-    "        with open(ff, 'r') as f:\n",
+    "        with open(ff, 'r', encoding='utf8') as f:\n",
     "            sentences.append(f.readline().strip())\n",
     "    return sentences        \n",
     "\n",
@@ -235,9 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# \n",
@@ -261,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[333, 6, 25, 17, 225, 85, 1204, 68, 300, 35, 6, 189, 7, 918, 4852, 3626, 24, 19, 1577, 4, 4288, 6, 25, 141, 902, 16196, 9, 183, 182, 41, 7648, 16803, 9, 6, 157, 21237, 4, 21, 38482, 123, 9, 46, 1634, 3203, 4, 1232, 24, 1543, 32, 21, 23890, 31, 9419, 46086, 22, 6, 679, 7460, 4] 1\n"
+      "[333, 6, 25, 17, 225, 85, 1202, 68, 300, 35, 6, 189, 7, 918, 4813, 3630, 24, 19, 1573, 4, 4274, 6, 25, 141, 902, 16036, 9, 183, 182, 41, 7659, 16758, 9, 6, 157, 21658, 4, 21, 37442, 123, 9, 46, 1632, 3211, 4, 1231, 24, 1541, 32, 21, 24735, 31, 9450, 47112, 22, 6, 679, 7545, 4] 1\n"
      ]
     }
    ],
@@ -290,7 +284,7 @@
       "Done!\n",
       "Tokenizing...\n",
       "Done!\n",
-      "[4135, 33, 46, 772, 80, 3, 320, 13665, 299, 2, 1654, 7, 46, 338, 1249, 3, 625, 631, 5, 531, 81, 2026, 5, 75, 20, 6274, 9322, 23, 52, 1909, 4, 137, 3786, 8, 62636, 23, 52, 854, 474, 50, 6, 63, 339, 8, 98, 271, 49, 16, 45, 3, 29, 73, 52, 35593, 20, 2655, 14, 1, 3, 75, 96, 36, 604, 2, 757, 23, 52, 854, 3, 5, 20, 911, 8, 864, 171, 377, 75, 96, 98, 115208, 4, 7863, 49, 2, 338, 35449, 4, 415, 2229, 14, 6, 317, 187, 75, 96, 2610, 58, 3, 75, 569, 6, 1234, 97, 2, 4455, 23, 6, 3694, 4877, 4, 32, 15, 802, 1642, 166, 14, 172, 4730, 15084, 3, 29, 194, 16699, 14, 87, 4, 15, 20, 4730, 559, 4, 31, 12, 13, 10, 11, 12, 13, 10, 11, 7112, 45, 780, 3189, 1960, 5, 75, 20, 1058, 14, 6, 1014, 10964, 4, 565, 73, 16, 613, 50, 75, 76, 4100, 5, 8005, 24130, 6, 1550, 3, 75, 234, 52, 3694, 4877, 98, 3830, 5, 351, 4, 142, 6, 3516, 380, 75, 858, 8, 1930, 49, 2, 779, 1550, 5, 372, 8, 2394, 104, 3, 23, 85, 215, 7, 769, 4, 106912, 52, 144, 20, 14, 2606, 4, 12, 13, 10, 11, 12, 13, 10, 11, 895, 9, 6, 272, 47, 7048, 9649, 3, 20605, 12723, 3, 21684, 52, 144, 8, 672, 198, 4, 5831, 7060, 9, 334, 3, 5, 36, 57, 8, 192, 43, 125, 75, 56, 6, 334, 582, 4, 61, 9, 46, 3411, 80, 4, 12, 13, 10, 11, 12, 13, 10, 11, 31, 335, 35, 4643, 17, 2296, 9, 2, 42, 2469, 17, 144, 228, 920, 4, 31]\n",
+      "[4136, 33, 46, 772, 80, 3, 320, 13470, 299, 2, 1655, 7, 46, 338, 1251, 3, 625, 631, 5, 531, 81, 2023, 5, 75, 20, 6280, 9213, 23, 52, 1910, 4, 137, 3778, 8, 57024, 23, 52, 853, 474, 50, 6, 63, 339, 8, 98, 271, 49, 16, 45, 3, 29, 73, 52, 35283, 20, 2649, 14, 1, 3, 75, 96, 36, 604, 2, 757, 23, 52, 853, 3, 5, 20, 911, 8, 864, 171, 377, 75, 96, 98, 81565, 4, 7782, 49, 2, 338, 33204, 4, 415, 2224, 14, 6, 317, 187, 75, 96, 2609, 58, 3, 75, 569, 6, 1233, 97, 2, 4428, 23, 6, 3707, 4909, 4, 32, 15, 802, 1640, 166, 14, 172, 4713, 15090, 3, 29, 194, 16988, 14, 87, 4, 15, 20, 4713, 559, 4, 31, 12, 13, 10, 11, 12, 13, 10, 11, 7103, 45, 780, 3184, 1969, 5, 75, 20, 1057, 14, 6, 1012, 11101, 4, 565, 73, 16, 613, 50, 75, 76, 4112, 5, 7954, 24619, 6, 1552, 3, 75, 234, 52, 3707, 4909, 98, 3857, 5, 351, 4, 142, 6, 3519, 380, 75, 858, 8, 1927, 49, 2, 781, 1552, 5, 373, 8, 2392, 104, 3, 23, 85, 215, 7, 769, 4, 97780, 52, 144, 20, 14, 2610, 4, 12, 13, 10, 11, 12, 13, 10, 11, 897, 9, 6, 272, 47, 7123, 9639, 3, 20009, 12681, 3, 20913, 52, 144, 8, 671, 198, 4, 5824, 7039, 9, 334, 3, 5, 36, 57, 8, 192, 43, 125, 75, 56, 6, 334, 581, 4, 61, 9, 46, 3414, 80, 4, 12, 13, 10, 11, 12, 13, 10, 11, 31, 335, 35, 4626, 17, 2302, 9, 2, 42, 2466, 17, 144, 228, 920, 4, 31]\n",
       "1\n"
      ]
     }
@@ -339,9 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "max_features = 50000 # Number of most frequent words selected. the less frequent recode to 0\n",
@@ -357,7 +349,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[61, 9, 6, 1577, 4, 214, 6, 1352, 4910, 391, 91, 2, 7545, 529, 20, 1020, 2105, 4, 6690, 23, 106, 460, 17, 1574, 87, 62, 6399, 4618, 127, 3, 108, 7459, 5, 353, 3227, 4, 51, 18, 239, 294, 4795, 8, 2, 247, 16, 18, 7567, 4, 335, 139, 166, 105, 602, 28, 42, 71, 520, 44, 2, 594, 7, 10830, 7, 6, 422, 14, 2, 3098, 27, 29, 100, 35, 4937, 8, 84, 16, 3, 6, 244, 50, 6, 549, 1752, 14, 633, 1567, 4, 21, 80, 14325, 107, 18306, 1376, 5, 1373, 62, 3792, 89, 36, 372, 5, 13465, 49, 801, 2, 49004, 3084, 7, 2, 561, 3, 22, 111, 1992, 23, 2, 3520, 7, 2, 101, 1749, 337, 543, 104, 3, 1504, 188, 48, 89, 30, 671, 104, 14, 74, 4, 51, 569, 87, 6, 184, 646, 8, 98, 58, 7, 2, 8584, 17, 17738, 87, 138, 342, 19, 0, 109, 704, 4]\n"
+      "[61, 9, 6, 1573, 4, 214, 6, 1353, 4934, 391, 91, 2, 7528, 529, 20, 1019, 2106, 4, 6659, 23, 106, 460, 17, 1578, 87, 62, 6409, 4628, 127, 3, 108, 7565, 5, 353, 3222, 4, 51, 18, 239, 294, 4809, 8, 2, 246, 16, 18, 7551, 4, 335, 139, 166, 105, 602, 28, 42, 71, 521, 44, 2, 593, 7, 10670, 7, 6, 421, 14, 2, 3096, 27, 29, 100, 35, 4956, 8, 84, 16, 3, 6, 244, 50, 6, 549, 1753, 14, 634, 1559, 4, 21, 80, 14492, 107, 18695, 1379, 5, 1374, 62, 3793, 89, 36, 373, 5, 13793, 49, 801, 2, 49224, 3085, 7, 2, 561, 3, 22, 111, 1993, 23, 2, 3517, 7, 2, 101, 1749, 337, 543, 104, 3, 1504, 188, 48, 89, 30, 672, 104, 14, 74, 4, 51, 569, 87, 6, 184, 646, 8, 98, 58, 7, 2, 8607, 17, 17517, 87, 138, 342, 19, 0, 109, 704, 4]\n"
      ]
     }
    ],
@@ -383,9 +375,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jorge/anaconda3/envs/tm/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: compiletime version 3.6 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.5\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/jorge/anaconda3/envs/tm/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/Users/jorge/anaconda3/envs/tm/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     },
@@ -393,29 +383,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /Users/jorge/anaconda3/envs/tm/lib/python3.5/site-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:198: retry (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From /Users/jorge/anaconda3/envs/tm/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:198: retry (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use the retry module or similar alternatives.\n",
       "Pad sequences (samples x time)\n",
       "X_train shape: (25000, 200)\n",
       "X_test shape: (25000, 200)\n",
-      "[    2   338 35449     4   415  2229    14     6   317   187    75    96\n",
-      "  2610    58     3    75   569     6  1234    97     2  4455    23     6\n",
-      "  3694  4877     4    32    15   802  1642   166    14   172  4730 15084\n",
-      "     3    29   194 16699    14    87     4    15    20  4730   559     4\n",
-      "    31    12    13    10    11    12    13    10    11  7112    45   780\n",
-      "  3189  1960     5    75    20  1058    14     6  1014 10964     4   565\n",
-      "    73    16   613    50    75    76  4100     5  8005 24130     6  1550\n",
-      "     3    75   234    52  3694  4877    98  3830     5   351     4   142\n",
-      "     6  3516   380    75   858     8  1930    49     2   779  1550     5\n",
-      "   372     8  2394   104     3    23    85   215     7   769     4     0\n",
-      "    52   144    20    14  2606     4    12    13    10    11    12    13\n",
-      "    10    11   895     9     6   272    47  7048  9649     3 20605 12723\n",
-      "     3 21684    52   144     8   672   198     4  5831  7060     9   334\n",
+      "[    2   338 33204     4   415  2224    14     6   317   187    75    96\n",
+      "  2609    58     3    75   569     6  1233    97     2  4428    23     6\n",
+      "  3707  4909     4    32    15   802  1640   166    14   172  4713 15090\n",
+      "     3    29   194 16988    14    87     4    15    20  4713   559     4\n",
+      "    31    12    13    10    11    12    13    10    11  7103    45   780\n",
+      "  3184  1969     5    75    20  1057    14     6  1012 11101     4   565\n",
+      "    73    16   613    50    75    76  4112     5  7954 24619     6  1552\n",
+      "     3    75   234    52  3707  4909    98  3857     5   351     4   142\n",
+      "     6  3519   380    75   858     8  1927    49     2   781  1552     5\n",
+      "   373     8  2392   104     3    23    85   215     7   769     4     0\n",
+      "    52   144    20    14  2610     4    12    13    10    11    12    13\n",
+      "    10    11   897     9     6   272    47  7123  9639     3 20009 12681\n",
+      "     3 20913    52   144     8   671   198     4  5824  7039     9   334\n",
       "     3     5    36    57     8   192    43   125    75    56     6   334\n",
-      "   582     4    61     9    46  3411    80     4    12    13    10    11\n",
-      "    12    13    10    11    31   335    35  4643    17  2296     9     2\n",
-      "    42  2469    17   144   228   920     4    31]\n"
+      "   581     4    61     9    46  3414    80     4    12    13    10    11\n",
+      "    12    13    10    11    31   335    35  4626    17  2302     9     2\n",
+      "    42  2466    17   144   228   920     4    31]\n"
      ]
     }
    ],
@@ -437,9 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Shuffle data\n",
@@ -451,9 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Export train and test data\n",
@@ -466,9 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Export worddict\n",
@@ -481,9 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -505,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
