--- a/99_homework/template_homework.ipynb
+++ b/99_homework/template_homework.ipynb
@@ -197,7 +197,7 @@
    "outputs": [],
    "source": [
     "# Score function\n",
-    "def score_function(data):\n",
+    "def score_function(data, model):\n",
     "    '''\n",
     "    score_function\n",
     "        Input: Raw text data\n",
@@ -212,7 +212,7 @@
     "    # Transformation steps\n",
     "    X_test_tf = encoding_text(data)\n",
     "    # Prediction steps\n",
-    "    predicted = clf.predict(X_test_tf)\n",
+    "    predicted = model.predict(X_test_tf)\n",
     "    # END OF EXAMPLE OF CODE\n",
     "\n",
     "    return predicted\n",
@@ -802,7 +802,7 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
     "\n",
     "# Evalaute valid data\n",
-    "pred_val = score_function(text_val)\n",
+    "pred_val = score_function(text_val, clf)\n",
     "\n",
     "#Calculate accuracy with sklearn\n",
     "print('Accuracy valid: ', accuracy_score(y_val, pred_val))\n",
@@ -867,7 +867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
